@@ -1,6 +1,8 @@
-// $Id: CHANGELOG.txt,v 1.1.2.20 2008/09/16 02:18:19 boombatower Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.21 2008/09/16 02:52:01 boombatower Exp $
 
 SimpleTest 6.x-2.4, xxxx-xx-xx (development version)
+- Backports:
+   * #305077: Rework simpletest backend.
 
 SimpleTest 6.x-2.3, 2008-09-15
 ------------------------------
